--- a/TaxiGO/nbproject/private/private.properties
+++ b/TaxiGO/nbproject/private/private.properties
@@ -1,10 +1,10 @@
-deploy.ant.properties.file=C:\\Users\\Sara\\AppData\\Roaming\\NetBeans\\8.0\\config\\GlassFishEE6\\Properties\\gfv3344067185.properties
+deploy.ant.properties.file=C:\\Users\\student\\AppData\\Roaming\\NetBeans\\8.0.2\\config\\GlassFishEE6\\Properties\\gfv339505140.properties
 j2ee.platform.is.jsr109=true
-j2ee.server.domain=C:/Users/Sara/GlassFish_Server/glassfish/domains/domain1
-j2ee.server.home=C:/Users/Sara/GlassFish_Server/glassfish
-j2ee.server.instance=[C:\\Users\\Sara\\GlassFish_Server\\glassfish;C:\\Users\\Sara\\GlassFish_Server\\glassfish\\domains\\domain1]deployer:gfv3ee6wc:localhost:4848
-j2ee.server.middleware=C:/Users/Sara/GlassFish_Server
+j2ee.server.domain=C:/Users/student/GlassFish_Server/glassfish/domains/domain1
+j2ee.server.home=C:/Users/student/GlassFish_Server/glassfish
+j2ee.server.instance=[C:\\Users\\student\\GlassFish_Server\\glassfish;C:\\Users\\student\\GlassFish_Server\\glassfish\\domains\\domain1]deployer:gfv3ee6wc:localhost:4848
+j2ee.server.middleware=C:/Users/student/GlassFish_Server
 javac.debug=true
 javadoc.preview=true
 selected.browser=default
-user.properties.file=C:\\Users\\Sara\\AppData\\Roaming\\NetBeans\\8.0\\build.properties
+user.properties.file=C:\\Users\\student\\AppData\\Roaming\\NetBeans\\8.0.2\\build.properties
