--- a/TaxiGO/nbproject/project.properties
+++ b/TaxiGO/nbproject/project.properties
@@ -29,7 +29,7 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-6.0.classpath}
 excludes=
-file.reference.mysql-connector-java-5.0.8-bin.jar=C:\\Users\\Sara\\Downloads\\mysql-connector-java-5.0.8-bin.jar
+file.reference.mysql-connector-java-5.1.28-bin.jar=C:\\Users\\student\\Chelsi\\Network Applications\\mysql-connector-java-5.1.28\\mysql-connector-java-5.1.28-bin.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -44,7 +44,7 @@ j2ee.platform.wsit.classpath=
 j2ee.server.type=gfv3ee6
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mysql-connector-java-5.0.8-bin.jar}
+    ${file.reference.mysql-connector-java-5.1.28-bin.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
